cmake_minimum_required(VERSION 3.5)
project(pipeline)

if (CMAKE_GENERATOR MATCHES "Visual Studio")
else()
    add_compile_options(-fPIC)
endif()
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libraw)
file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_executable(${PROJECT_NAME} ${SRC})
target_link_libraries(${PROJECT_NAME} Layer Mat)
